--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -23,7 +23,7 @@
     <properties>
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
-        <spring.boot.version>1.4.0.RC1</spring.boot.version>
+        <spring.boot.version>1.4.0.RELEASE</spring.boot.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.0.2-beta</mockito.version>
         <powermock.version>1.6.2</powermock.version>
@@ -219,21 +219,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <encoding>${project.encoding}</encoding>
-                    <source>${language.level}</source>
-                    <target>${language.level}</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <repositories>
         <repository>
