--- a/siva-parent/siva-test/pom.xml
+++ b/siva-parent/siva-test/pom.xml
@@ -105,7 +105,7 @@
                                 </goals>
                                 <configuration>
                                     <jMeterProcessJVMSettings>
-                                        <xmx>2g</xmx>
+                                        <xmx>2048</xmx>
                                     </jMeterProcessJVMSettings>
                                     <testResultsTimestamp>false</testResultsTimestamp>
                                     <propertiesUser>
