MAINTENANCE:  Separated XROAD validation service into separate application. Added logic to handle XROAD exception in proxy

--- a/siva-parent/siva-distribution/pom.xml
+++ b/siva-parent/siva-distribution/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>siva-sample-application</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openeid.siva</groupId>
+            <artifactId>xroad-validation-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
