MAINTENANCE:  Fixed validation result caching issues and set max file upload limit to 1

--- a/siva-parent/siva-sample-application/src/main/resources/application.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
   http:
     multipart:
       max-file-size: "10Mb"
+  cache:
+    caffeine:
+      spec: maximumSize=100,expireAfterAccess=20s
 management:
   context-path: /monitoring
 security:
