--- a/siva-parent/siva-sample-application/src/main/resources/application.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application.yml
@@ -9,12 +9,15 @@ spring:
   cache:
     caffeine:
       spec: maximumSize=100,expireAfterAccess=20s
-management:
-  context-path: /monitoring
-security:
-  basic:
-    path: /monitoring/**
+#management:
+#  context-path: /monitoring
+#security:
+#  basic:
+#    path: /monitoring/**
+#  headers:
+#    cache: false
 wro4j:
   filterUrl: /owr
+  cacheName: owr
   managerFactory:
     preProcessors: removeSourceMaps, cssUrlRewriting, cssImport, cssMinJawr, semicolonAppender, jsMin
