--- a/siva-parent/siva-webapp/pom.xml
+++ b/siva-parent/siva-webapp/pom.xml
@@ -69,7 +69,6 @@
                 <version>1.3.5.RELEASE</version>
                 <configuration>
                     <executable>true</executable>
-                    <outputDirectory>${project.build.directory}/executable</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -78,6 +77,29 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.11</version>
+                <configuration>
+                    <imageName>mihkels/${artifactId}</imageName>
+                    <imageTags>
+                        <imageTag>${project.version}</imageTag>
+                        <imageTag>latest</imageTag>
+                    </imageTags>
+                    <baseImage>cogniteev/oracle-java:latest</baseImage>
+                    <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                    <serverId>docker-hub</serverId>
+                    <retryPushCount>0</retryPushCount>
+                </configuration>
             </plugin>
         </plugins>
     </build>
