--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -65,6 +65,12 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>eu.michael-simons</groupId>
+                <artifactId>wro4j-spring-boot-starter</artifactId>
+                <version>0.1.1</version>
+            </dependency>
+
             <!-- Apache CXF -->
             <dependency>
                 <groupId>org.apache.cxf</groupId>
@@ -142,7 +148,7 @@
             <dependency>
                 <groupId>org.webjars.bower</groupId>
                 <artifactId>bootstrap</artifactId>
-                <version>4.0.0-alpha.2</version>
+                <version>4.0.0-alpha.3</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.webjars.bower</groupId>
@@ -178,14 +184,29 @@
 
             <!-- Public Dependencies -->
             <dependency>
-                <groupId>commons-codec</groupId>
-                <artifactId>commons-codec</artifactId>
-                <version>1.6</version>
-            </dependency>
-            <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
+            </dependency>
+
+            <!-- Caching in memory file store -->
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>2.3.1</version>
+            </dependency>
+
+            <!-- Apache commons -->
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>zt-zip</artifactId>
+                <version>1.9</version>
+                <type>jar</type>
             </dependency>
 
             <!-- Lombok for getters and setters -->
