[skip ci] MAINTENANCE: Added JAVA_OPTS support to Docker images

--- a/siva-parent/siva-webapp/pom.xml
+++ b/siva-parent/siva-webapp/pom.xml
@@ -88,8 +88,11 @@
                         <imageTag>${project.version}</imageTag>
                         <imageTag>latest</imageTag>
                     </imageTags>
+                    <env>
+                        <JAVA_OPTS>""</JAVA_OPTS>
+                    </env>
                     <baseImage>cogniteev/oracle-java:latest</baseImage>
-                    <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
+                    <entryPoint>exec java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /${project.build.finalName}.jar </entryPoint>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
