MAINTENANCE: Removed unused java option

--- a/validation-services-parent/xroad-validation-service/pom.xml
+++ b/validation-services-parent/xroad-validation-service/pom.xml
@@ -187,7 +187,7 @@
                         <JAVA_OPTS>""</JAVA_OPTS>
                     </env>
                     <baseImage>anapsix/alpine-java:latest</baseImage>
-                    <entryPoint>exec java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /${project.build.finalName}.jar </entryPoint>
+                    <entryPoint>exec java $JAVA_OPTS -jar /${project.build.finalName}.jar </entryPoint>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
