--- a/siva-parent/siva-sample-application/pom.xml
+++ b/siva-parent/siva-sample-application/pom.xml
@@ -195,7 +195,7 @@
                         <JAVA_OPTS>""</JAVA_OPTS>
                     </env>
                     <baseImage>cogniteev/oracle-java:latest</baseImage>
-                    <entryPoint>exec java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /${project.build.finalName}.jar </entryPoint>
+                    <entryPoint>exec java $JAVA_OPTS -jar /${project.build.finalName}.jar </entryPoint>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
