--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -181,6 +181,11 @@
                 <artifactId>bootstrap-fileinput</artifactId>
                 <version>4.3.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.webjars.bower</groupId>
+                <artifactId>js-cookie</artifactId>
+                <version>2.1.2</version>
+            </dependency>
 
             <!-- Public Dependencies -->
             <dependency>
