--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,3 +33,4 @@ pages:
       - Appendix 3 - Validation Policy: siva/appendix/validation_policy.md
       - Appendix 4 - Validation Constraint Configuration: siva/appendix/validation_constraints.md
       - Appendix 5 - Test Case Descriptions: siva/appendix/test_cases.md
+      - Appendix 6 - WSDL of SOAP Interface : siva/appendix/wsdl.md
