MAINTENANCE: Added input validation in SOAP for following fields: document, filename and signaturePolicy

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,7 @@
 #JSR-303 bean validation uses this for default messages
 
-validation.error.message.base64 = not valid base64 encoded string
-validation.error.message.documentType = invalid document type
-validation.error.message.filename = invalid filename
-validation.error.message.signaturePolicy = invalid signature policy
-validation.error.message.general = invalid value
+validation.error.message.base64 = Document is not encoded in a valid base64 string
+validation.error.message.documentType = Invalid document type
+validation.error.message.filename = Invalid filename
+validation.error.message.signaturePolicy = Invalid signature policy
+validation.error.message.general = Invalid value
