MAINTENANCE: respond with HTTP 400 and soap faultcode: client when document malformed error occurs

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -5,3 +5,4 @@ validation.error.message.documentType = Invalid document type
 validation.error.message.filename = Invalid filename
 validation.error.message.signaturePolicy = Invalid signature policy
 validation.error.message.general = Invalid value
+validation.error.message.invalidRequest = Invalid request
