MAINTENANCE: Renamed response timeout field in pom.xml for load tests. This seemed to cause an effect that command line parameter was not accepted.

--- a/siva-parent/siva-test/pom.xml
+++ b/siva-parent/siva-test/pom.xml
@@ -116,7 +116,7 @@
                 <jmeter.host.name>localhost</jmeter.host.name>
                 <jmeter.host.port>8080</jmeter.host.port>
                 <jmeter.host.endpoint>/validate</jmeter.host.endpoint>
-                <jmeter.host.timeoutInMillis>120000</jmeter.host.timeoutInMillis>
+                <jmeter.host.timeout>60000</jmeter.host.timeout>
                 <jmeter.testfiles.dir>${project.basedir}/src/test/jmeter/test-files</jmeter.testfiles.dir>
                 <jmeter.load.step.duration>60</jmeter.load.step.duration>
                 <jmeter.exclude.testplans>test.jmx</jmeter.exclude.testplans>
@@ -149,7 +149,7 @@
                                         <host.name>${jmeter.host.name}</host.name>
                                         <host.port>${jmeter.host.port}</host.port>
                                         <host.endpoint>${jmeter.host.endpoint}</host.endpoint>
-                                        <host.timeout>${jmeter.host.timeoutInMillis}</host.timeout>
+                                        <host.timeout>${jmeter.host.timeout}</host.timeout>
                                         <testfiles.dir>${jmeter.testfiles.dir}</testfiles.dir>
                                         <errors.dir>${project.build.directory}/jmeter/results/errors</errors.dir>
                                         <load.step.duration>${jmeter.load.step.duration}</load.step.duration>
