--- a/validation-services-parent/pdf-validation-service/src/main/resources/application-test.yaml
+++ b/validation-services-parent/pdf-validation-service/src/main/resources/application-test.yaml
@@ -2,8 +2,14 @@ siva:
   pdf:
     signaturePolicy:
       policies:
-        ? EE
-        : pdf_constraint.xml
-        ? EU
-        : pdf_constraint2.xml
-      defaultPolicy: pdf_constraint.xml
+        -
+          name: POLv1
+          description: asd
+          url: bla
+          constraintPath: pdf_constraint2.xml
+        -
+          name: POLv2
+          description: asd
+          url: bla
+          constraintPath: pdf_constraint.xml
+      defaultPolicy: POLv1
