--- a/validation-services-parent/pdf-validation-service/src/main/resources/application-test.yaml
+++ b/validation-services-parent/pdf-validation-service/src/main/resources/application-test.yaml
@@ -6,10 +6,10 @@ siva:
           name: POLv1
           description: Policy for validating Electronic Signatures and Electronic Seals regardless of the legal type of the signature or seal (according to Regulation (EU) No 910/2014), i.e. the fact that the electronic signature or electronic seal is either Advanced electronic Signature (AdES), AdES supported by a Qualified Certificate (AdES/QC) or a Qualified electronic Signature (QES) does not change the total validation result of the signature.
           url: http://open-eid.github.io/SiVa/siva/appendix/validation_policy/#POLv1
-          constraintPath: pdf_constraint2.xml
+          constraintPath: pdf_constraint_no_type.xml
         -
           name: POLv2
           description: Policy for validating Qualified Electronic Signatures and Qualified Electronic Seals (according to Regulation (EU) No 910/2014). I.e. signatures that have been recognized as Advanced electronic Signatures (AdES) and AdES supported by a Qualified Certificate (AdES/QC) do not produce a positive validation result.
           url: http://open-eid.github.io/SiVa/siva/appendix/validation_policy/#POLv2
-          constraintPath: pdf_constraint.xml
+          constraintPath: pdf_constraint_qes.xml
       defaultPolicy: POLv1
