--- a/validation-services-parent/tsl-loader/pom.xml
+++ b/validation-services-parent/tsl-loader/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
