--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 
     <licenses>
         <license>
-            <name>GNU Lesser General Public License, Version 2.1</name>
-            <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
+            <name>European Union Public License 1.1</name>
+            <url>https://joinup.ec.europa.eu/software/page/eupl5</url>
         </license>
     </licenses>
     <developers>
